Localizing password reset backend #5582

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -64,6 +64,8 @@ en:
         phone: Phone
       comment:
         text: Comment
+      user:
+        reset_password_token: Reset password token
     errors:
       messages:
         record_invalid: 'Validation failed: %{errors}'
