--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -62,6 +62,8 @@ ar:
         phone: رقم الهاتف
       comment:
         text: التعليق
+      user:
+        reset_password_token: رمز إعادة تعيين كلمة المرور
     errors:
       messages:
         record_invalid: 'خطأ في صحة الإدخال: %{errors}'
