--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -148,5 +148,6 @@ en:
         menu: Export project data
   reset_password_instructions: Check reset password instructions
   email_not_found: E-mail not found
-  slack_channel_format_wrong: 'Slack channel is invalid, it should have the format
-    #general'
+  slack_channel_format_wrong: 'Slack channel is invalid, it should have the format #general'
+  translation_status_not_valid: 'Status not valid'
+  translation_status_permission_error: 'You are not allowed to make this status change'
