--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -155,3 +155,5 @@ en:
   translation_status_permission_error: 'You are not allowed to make this status change'
   translation_request_id_exists: 'There is already a translation request for this message'
   slack_update_translation_status: "*%{user}* changed translation status on *%{report}* from *%{from}* to *%{to}*"
+  auto_publisher_added_to_project: "Thanks! Now all new translations under project %{project} will be automatically published to this account on %{provider}. If you change your mind, please contact the administrator or simply revoke the Bridge authorization from %{provider}."
+  invalid_token: 'Invalid Token'
