--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -150,10 +150,15 @@ en:
         menu: Export project data
   reset_password_instructions: Check reset password instructions
   email_not_found: E-mail not found
-  slack_channel_format_wrong: 'Slack channel is invalid, it should have the format #general'
-  translation_status_not_valid: 'Status not valid'
-  translation_status_permission_error: 'You are not allowed to make this status change'
-  translation_request_id_exists: 'There is already a translation request for this message'
-  slack_update_translation_status: "*%{user}* changed translation status on *%{report}* from *%{from}* to *%{to}*"
-  auto_publisher_added_to_project: "Thanks! Now all new translations under project %{project} will be automatically published to this account on %{provider}. If you change your mind, please contact the administrator or simply revoke the Bridge authorization from %{provider}."
-  invalid_token: 'Invalid Token'
+  slack_channel_format_wrong: 'Slack channel is invalid, it should have the format
+    #general'
+  translation_status_not_valid: Status not valid
+  translation_status_permission_error: You are not allowed to make this status change
+  translation_request_id_exists: There is already a translation request for this message
+  slack_update_translation_status: "*%{user}* changed translation status on *%{report}*
+    from *%{from}* to *%{to}*"
+  auto_publisher_added_to_project: Thanks! Now all new translations under project
+    %{project} will be automatically published to this account on %{provider}. If
+    you change your mind, please contact the administrator or simply revoke the Bridge
+    authorization from %{provider}.
+  invalid_token: Invalid Token
