--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -133,3 +133,4 @@ fr:
   slack_update_translation_status: "*%{user}* a modifié le statut de traduction pour *%{report}* de *%{from}* à *%{to}*"
   auto_publisher_added_to_project: Merci ! Dorénavant toutes les traductions du projet %{project} seront automatiquement publiées via ce compte %{provider}. Si vous changez d'avis, contactez notre équipe de support ou bien révoquez l'autorisation de Bridge pour %{provider}.
   invalid_token: Jeton de sécurité invalide
+  viber_screenshot_footer: "Traduction en %{target_language} de l'original en %{source_language}: “%{source_text}”"
