--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -80,14 +80,16 @@ fr:
   slack_webhook_format_wrong: 'Webhook Slack non valide : le format doit être `https://hooks.slack.com/services/XXXXX/XXXXXXXXXX`'
   slug_is_reserved: est réservé
   invalid_format_for_custom_verification_status: 'Statuts de vérifications personnalisés non valides : le format correct est affiché au-dessous du champ de saisie'
+  invalid_format_for_checklist: 'Le champ de liste de contrôle est non-valide. Il devrait se conformer au format [ { ''label'': ''XXXX'', ''type'': ''free_text'',''description'': ''YYYY'', ''projects'': [], ''options'': ''[{ ''label'': ''YYYY'' }]'' } ]'
+  invalid_format_for_languages: 'Le champ des langages est non-valide. Il doit conformer au format [{''id'': ''en'',''title'': ''English''}]'
   invalid_media_item: Désolé, ce média n'est pas valide
   already_exists: existe déjà
-  mail_account_confirmation: Confirmation de votre compte Check
-  mail_request_to_join: "%{user} demande à se joindre à l'équipe %{team} sur Check !"
+  mail_account_confirmation: "Confirmation de votre compte %{app_name}"
+  mail_request_to_join: "%{user} demande à se joindre à l'équipe %{team} sur %{app_name} !"
   approved: acceptée !
   rejected: rejetée
-  mail_request_to_join_processed: Votre requête de vous joindre à %{team} sur Check est %{status}
-  mail_new_account: Votre nouveau compte sur Check
+  mail_request_to_join_processed: Votre requête pour vous joindre à %{team} sur %{app_name} est %{status}
+  mail_new_account: Votre nouveau compte sur %{app_name}
   slack_update_status: "*%{user}* a modifié le statut de vérification pour %{url}  dans *%{project}* de _%{previous_status}_ à *%{current_status}*"
   slack_save_embed: "*%{user}* a modifié le titre d'un rapport dans *%{project}* de _%{from}_ à %{to}"
   slack_save_comment: "*%{user}* a rajouté un commentaire sur %{url} dans *%{project}* : %{comment}"
@@ -106,16 +108,16 @@ fr:
   slack_update_task_description: |-
     *%{user}* a modifié la description de la tâche %{url} dans *%{project}* de : %{from}
     *à :* %{to}
-  mail_view_welcome: Bienvenue sur Check
-  mail_view_register: 'Il ne vous manque plus qu''une étape pour utiliser Check ! Prière de confirmer votre courriel en cliquant ce lien :'
+  mail_view_welcome: Bienvenue sur %{app_name}
+  mail_view_register: 'Il ne vous manque plus qu''une étape pour démarrer sur %{app_name} ! Prière de confirmer votre courriel en cliquant ce lien :'
   mail_view_joined: Votre requête de vous joindre à %{team} a été acceptée ! Visitez %{url} pour commencer à contribuer.
   mail_view_rejected_to_join: Désolé, mais votre requête de vous joindre à %{team} a été rejetée.
-  mail_view_request_to_join: "%{user} (%{handle}) demande à se joindre à l'équipe %{team} sur Check !"
+  mail_view_request_to_join: "%{user} (%{handle}) demande à se joindre à l'équipe %{team} sur %{app_name} !"
   mail_view_process_request: 'Pour traiter cette requête, prière de vous connecter et de visiter:'
   pender_could_not_parse: Ce n'était pas possible d'analyser ce média
-  mail_duplicate_email_exists: Votre connexion à Check
-  mail_duplicate_email_exists_body: "<p>Bonjour, ceci est un rappel pour vous aider à vous connecter à Check.</p> <p>En bref : Vous avez tenté de vous connecter via un compte %{user_provider} lié à l'adresse %{user_email}. Mais cette adresse est déjà associée à votre compte Check via %{duplicate_provider}.</p> <p>Quoi faire ? Connectez-vous à Check via %{duplicate_provider}.</p> <p>Vous serez alors connecté au même compte que vous aviez déjà mis en place. Pour plus d'infos, contactez-nous à check@meedan.com. </p> <p>— L'équipe Check</p>"
-  mail_duplicate_email_exists_body_both_emails: "<p>Bonjour, ceci est un rappel pour vous aider à vous connecter à Check.</p> <p>En bref : Vous avez tenté de créer un nouveau compte Check, mais votre compte existe déjà.</p> <p>Au lieu de créer un nouveau compte, vous pouvez simplement vous connecter avec votre courriel et mot de passe.</p> <p>Vous serez alors connecté au même compte que vous aviez déjà mis en place. Pour plus d'infos, contactez-nous à check@meedan.com. </p> <p>— L'équipe Check</p>"
+  mail_duplicate_email_exists: Votre connexion à %{app_name}
+  mail_duplicate_email_exists_body: "<p>Bonjour, ceci est un rappel pour vous aider à vous connecter à %{app_name}.</p> <p>En bref : Vous avez tenté de vous connecter via un compte %{user_provider} lié à l'adresse %{user_email}. Mais cette adresse est déjà associée à votre compte %{app_name} via %{duplicate_provider}.</p> <p>Quoi faire ? Connectez-vous à %{app_name} via %{duplicate_provider}.</p> <p>Vous serez alors connecté au même compte que vous aviez déjà mis en place. Pour plus d'infos, contactez-nous à check@meedan.com. </p> <p>— L'équipe %{app_name}</p>"
+  mail_duplicate_email_exists_body_both_emails: "<p>Bonjour, ceci est un rappel pour vous aider à vous connecter à %{app_name}.</p> <p>En bref : Vous avez tenté de créer un nouveau compte %{app_name}, mais votre compte existe déjà.</p> <p>Au lieu de créer un nouveau compte, vous pouvez simplement vous connecter avec votre courriel et mot de passe.</p> <p>Vous serez alors connecté au même compte que vous aviez déjà mis en place. Pour plus d'infos, contactez-nous à check@meedan.com. </p> <p>— L'équipe %{app_name}</p>"
   mail_duplicate_email_exists_email: courriel
   slack_restricted_join_to_members: Désolé, vous ne pouvez pas vous joindre à l'équipe %{team_name} car elle est reservée aux membres de l'équipe Slack %{teams}.
   admin:
@@ -124,7 +126,7 @@ fr:
         menu: Envoyer les instructions pour réinitialiser le mot de passe
       export_project:
         menu: Exporter les données du projet
-  reset_password_instructions: Instructions pour réinitialiser le mot de passe
+  reset_password_instructions: "Instructions pour réinitialiser le mot de passe sur %{app_name}"
   email_not_found: Courriel introuvable
   slack_channel_format_wrong: 'Canal Slack non valide : le format doit être `#general`'
   translation_status_not_valid: Statut invalide
