Ticket #4846: Finished the embed implementation, including: design, client-side in-place localization, RTL support, responsiveness, mobile support and automated tests

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -140,3 +140,6 @@ ar:
   auto_publisher_added_to_project: من الآن سوف يتم نشر كل ترجمة في %{project} إلى الحساب الذي أخترته على %{provider}. إن غيرت رأيك من فضلك تواصل مع فريق الدعم أو أحذف تطبيق Bridge من الحساب على %{provider}.
   invalid_token: رمز الأمان غير صحيح
   viber_screenshot_footer: "ترجمة إلى %{target_language} من %{source_language}: “%{source_text}”"
+  time:
+    formats:
+      oembed: "%Y %B %d"
