--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -108,6 +108,7 @@ en:
   slack_create_project: "*%{user}* created a project: %{url}"
   slack_create_team_user: "*%{user}* joined team %{url}"
   slack_create_project_media: "*%{user}* added a new %{type} to *%{project}*: %{url}"
+  slack_create_project_media_no_user: "A new %{type} has been added to *%{project}*: %{url}"
   slack_create_task: "*%{user}* created task %{url} in *%{project}*%{create_note}"
   slack_create_task_note: " with note: %{note}"
   slack_answer_task: |-
