--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -87,19 +87,20 @@ en:
   slug_is_reserved: is reserved
   invalid_format_for_custom_verification_status: Custom verification statuses is invalid,
     it should have the format as exemplified below the field
-  invalid_format_for_checklist: "Checklist is invalid, it should have the format
-    [ { 'label': 'XXXX', 'type': 'free_text','description': 'YYYY', 'projects':
-    [], 'options': '[{ \'label\': \'YYYY\' }]' } ]"
-  invalid_format_for_languages: "Languages is invalid, it should have the format
-    [{'id': 'en','title': 'English'}]"
+  invalid_format_for_checklist: 'Checklist is invalid, it should have the format [
+    { ''label'': ''XXXX'', ''type'': ''free_text'',''description'': ''YYYY'', ''projects'':
+    [], ''options'': ''[{ ''label'': ''YYYY'' }]'' } ]'
+  invalid_format_for_languages: 'Languages is invalid, it should have the format [{''id'':
+    ''en'',''title'': ''English''}]'
   invalid_media_item: Sorry, this is not a valid media item
   already_exists: already exists
   mail_account_confirmation: "%{app_name} account confirmation"
   mail_request_to_join: "%{user} wants to join %{team} team on %{app_name}!"
   approved: approved!
   rejected: not approved
-  mail_request_to_join_processed: "Your request to join %{team} on %{app_name} was %{status}"
-  mail_new_account: "New account for you on %{app_name}"
+  mail_request_to_join_processed: Your request to join %{team} on %{app_name} was
+    %{status}
+  mail_new_account: New account for you on %{app_name}
   slack_update_status: "*%{user}* changed the verification status on %{url}  in *%{project}*
     from _%{previous_status}_ to *%{current_status}*"
   slack_save_embed: "*%{user}* changed a report title in *%{project}* from _%{from}_
@@ -108,7 +109,8 @@ en:
   slack_create_project: "*%{user}* created a project: %{url}"
   slack_create_team_user: "*%{user}* joined team %{url}"
   slack_create_project_media: "*%{user}* added a new %{type} to *%{project}*: %{url}"
-  slack_create_project_media_no_user: "A new %{type} has been added to *%{project}*: %{url}"
+  slack_create_project_media_no_user: 'A new %{type} has been added to *%{project}*:
+    %{url}'
   slack_create_task: "*%{user}* created task %{url} in *%{project}*%{create_note}"
   slack_create_task_note: " with note: %{note}"
   slack_answer_task: |-
@@ -121,30 +123,30 @@ en:
   slack_update_task_description: |-
     *%{user}* edited task note at %{url} in *%{project}* from: %{from}
     *To:* %{to}
-  mail_view_welcome: "Welcome to %{app_name}"
-  mail_view_register: "You are only one step away from using %{app_name}! Please
-    confirm your email address by clicking the following link:"
+  mail_view_welcome: Welcome to %{app_name}
+  mail_view_register: 'You are only one step away from using %{app_name}! Please confirm
+    your email address by clicking the following link:'
   mail_view_joined: Your request to join %{team} was approved! You can now go to %{url}
     and start contributing!
   mail_view_rejected_to_join: Sorry, but your request to join %{team} was rejected.
   mail_view_request_to_join: "%{user} (%{handle}) wants to join %{team} team on %{app_name}!"
   mail_view_process_request: 'To process this request, please login and visit:'
   pender_could_not_parse: Could not parse this media
-  mail_duplicate_email_exists: "Your login method for %{app_name}"
+  mail_duplicate_email_exists: Your login method for %{app_name}
   mail_duplicate_email_exists_body: "<p>Hello, this is just a friendly reminder to
-    help make sure you get logged in to %{app_name}.</p> <p>What happened: You tried to
-    sign in to %{app_name} with a %{user_provider}-based account linked to %{user_email}.
+    help make sure you get logged in to %{app_name}.</p> <p>What happened: You tried
+    to sign in to %{app_name} with a %{user_provider}-based account linked to %{user_email}.
     But this email address is already associated with a %{duplicate_provider}-based
     account in %{app_name}.</p> <p>What to do next: Sign in with %{duplicate_provider}.</p>
     <p>Then you'll be logged in with the account you were using before. If you need
     additional help, please email %{support_email}.</p> <p>— The %{app_name} team</p>"
   mail_duplicate_email_exists_body_both_emails: "<p>Hello, this is just a friendly
-    reminder to help make sure you get logged in to %{app_name}.</p> <p>What happened: You
-    tried to create a new email- based account on %{app_name}, but this account already
-    exists.</p> <p>Try signing in with your email and password, rather than creating
-    a new account.</p> <p>Then you'll be logged in with the account you were using
-    before. If you need additional help, please email %{support_email}.</p> <p>— The
-    %{app_name} team</p>"
+    reminder to help make sure you get logged in to %{app_name}.</p> <p>What happened:
+    You tried to create a new email- based account on %{app_name}, but this account
+    already exists.</p> <p>Try signing in with your email and password, rather than
+    creating a new account.</p> <p>Then you'll be logged in with the account you were
+    using before. If you need additional help, please email %{support_email}.</p>
+    <p>— The %{app_name} team</p>"
   mail_duplicate_email_exists_email: email
   slack_restricted_join_to_members: Sorry, you cannot join %{team_name} because it
     is restricted to members of the Slack team(s) %{teams}.
