--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -140,3 +140,28 @@ pt:
   time:
     formats:
       oembed: "%d de %B de %Y"
+  oembed_disclaimer: A veracidade desta mídia foi verificada pela equipe %{team} em %{date}
+  oembed_source_date: "%{date} no %{provider}"
+  role_editor: editor
+  role_owner: proprietário
+  role_contributor: colaborador
+  role_journalist: jornalista
+  role_none: membro
+  oembed_credit: Adicionado por %{user} (%{role}) %{date}
+  oembed_notes_count:
+    zero: Nenhuma nota
+    one: Uma nota
+    other: "%{count} notas"
+  oembed_completed_tasks_count:
+    zero: Nenhuma tarefa concluída
+    one: Uma tarefa concluída
+    other: "%{count} tarefas concluídas"
+  oembed_verification_tasks: Tarefas de verificação
+  oembed_expand_all: Expandir tudo
+  oembed_collapse_all: Recolher tudo
+  oembed_resolved_tasks_count:
+    zero: Nenhuma tarefa de verificação concluída
+    one: Uma tarefa de verificação concluída
+    other: "%{count} tarefas de verificação concluídas"
+  oembed_notes: Notas
+  pender_conflict: Este link já está sendo processado, por favor tente novamente em alguns segundos.
