Ticket #6191: Do not allow sources with different names but same URL under the same project

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -204,3 +204,4 @@ en:
     other: "%{count} resolved verification tasks"
   oembed_notes: Notes
   pender_conflict: This link is already being parsed, please try again in a few seconds.
+  duplicate_source: Source exists
