--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -206,3 +206,4 @@ en:
   pender_conflict: This link is already being parsed, please try again in a few seconds.
   duplicate_source: Source exists
   geolocation_invalid_value: "Location must contain a valid GeoJSON (http://geojson.org/)"
+  datetime_invalid_date: "Please provide a valid date"
