--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -175,6 +175,7 @@ en:
   time:
     formats:
       oembed: "%B %d, %Y"
+      task: "%B %d, %Y at %H:%M %z"
   oembed_disclaimer_undetermined: This media has not been reviewed by the %{team} team
   oembed_disclaimer_in_progress: The accuracy of this media is in progress of being determined by the %{team} team on %{date}
   oembed_disclaimer_verified: The accuracy of this media was verified by the %{team} team on %{date}
